# rust-project-goals

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  book.toml  goalModel.istar2  justfile  migrate_flagship.py  owners.istar2  owners.sh  owners.txt  paper.istar2  paper2.istar2  pistar  rust-project-goals.code-workspace  rust-project-goals.toml  rust.istar2  tags  teams.sh  teams.txt  triagebot.toml
.ai/: architecture.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  compile.yml  mdbook.yml
crates/: README.md
crates/mdbook-goals/: 2024h2.md  Cargo.toml  README.md
crates/mdbook-goals/src/: goal.rs  goal_preprocessor.rs  json.rs  main.rs  mdbook_preprocessor.rs  rfc.rs  team.rs  team_repo.rs  templates.rs  updates.rs
crates/mdbook-goals/src/gh/: issues.rs
crates/rust-project-goals/: Cargo.toml
crates/rust-project-goals-cli/: Cargo.toml
crates/rust-project-goals-cli-llm/: Cargo.toml
crates/rust-project-goals-cli-llm/src/: llm.rs  main.rs  templates.rs  updates.rs
crates/rust-project-goals-cli/src/: cfp.rs  csv_reports.rs  generate_json.rs  lib.rs  main.rs  review.rs  rfc.rs  team_repo.rs  templates.rs  updates.rs
crates/rust-project-goals-cli/src/updates/: templates.rs
crates/rust-project-goals-json/: Cargo.toml
crates/rust-project-goals-llm/: Cargo.toml
crates/rust-project-goals/src/: config.rs  format_champions.rs  format_team_ask.rs  format_team_support.rs  gh.rs  goal.rs  json.rs  lib.rs  markdown_processor.rs  markwaydown.rs  re.rs  team.rs  util.rs
crates/rust-project-goals/src/gh/: issue_id.rs  issues.rs  labels.rs  milestone.rs
gh-cache/: @1c3t3a.bincode  @BoxyUwU.bincode  @Darksonn.bincode  @Deleted.bincode  @GuillaumeGomez.bincode  @Jamesbarford.bincode  @Kobzol.bincode  @Muscraft.bincode  @SparrowLii.bincode  @ZuseZ4.bincode  @adetaylor.bincode  @amandasystems.bincode  @baumanj.bincode  @blyxyas.bincode  @camelid.bincode  @compiler-errors.bincode  @dingxiangfei2009.bincode  @eh2406.bincode  @eholk.bincode  @epage.bincode  @estebank.bincode  @folkertdev.bincode  @ghost.bincode  @harmou01.bincode  @hi-rustin.bincode  @jaisnan.bincode  @jdonszelmann.bincode  @jkelleyrtp.bincode  @joshtriplett.bincode  @lcnr.bincode  @lqd.bincode  @mrkajetanp.bincode  @nbdd0121.bincode  @nikomatsakis.bincode  @notriddle.bincode  @obi1kenobi.bincode  @oli-obk.bincode  @petrochenkov.bincode  @pnkfelix.bincode  @spastorino.bincode  (+6 more)
mdbook-goals/: Cargo.toml
mdbook-goals/src/: fcp.rs  gh.rs  goal.rs  json.rs  llm.rs  main.rs  markwaydown.rs  mdbook_preprocessor.rs  re.rs  rfc.rs  team.rs  team_repo.rs  templates.rs  updates.rs  util.rs
mdbook-goals/src/gh/: issue_id.rs  issues.rs  labels.rs
plugin/extract-output-table/: Cargo.toml
proposals/: 0000-TEMPLATE.md  0001-Project-goal-slate.md  0002-Async-Rust.md
src/: FLAGSHIP_TEMPLATE.md  README.md  ROADMAP_TEMPLATE.md  SUMMARY.md  TEMPLATE.md  introduction.md  rfc.md  update-progress-bars.js
src/2024h2/: 0000-TEMPLATE.md  0001-Project-goal-slate.md  0002-Async-Rust.md  0005-Rust-2024-Edition.md  0006-Polonius.md  ATPIT.md  Async--AsyncClosures.md  Async--Streams.md  Async-Rust.md  Async.md  Contracts-and-invariants.md  Fallible-allocation.md  Impl-trait-everywhere.md  Impl-trait-everywhere.md.md  Intrusive-linked-lists.md  New-trait-solver.md  Patterns-of-empty-types.md  Polonius.md  Project-goal-slate.md  README.md  RFL.md  Relaxing-the-Orphan-Rule.md  Rust-2024-Edition.md  Rust-for-Linux.md  Rust-for-SciComp.md  Seamless-C-Support.md  __proposed__.md  a-mir-formality.md  accepted.md  annotate-snippets.md  arbitrary_self_types.md  async.md  async_fn_everywhere.md  burnout.md  candidates.md  cargo-script.md  cargo-semver-checks.md  const-traits.md  cross_cutting.md  derive_smart_pointer.md  (+30 more)
src/2025h1/: GPU-Offload.md  Polonius.md  README.md  all-hands.md  annotate-snippets.md  arm-sve-sme.md  async.md  build-std.md  cargo-plumbing.md  cargo-script.md  cargo-semver-checks.md  compiletest-directive-rework.md  const-trait.md  eii.md  ergonomic-rc.md  externally-implementable-items.md  field-projections.md  formality.md  goals.md  improve-rustc-codegen.md  incremental-rust-cpp.md  inference-experiments.md  libtest-json.md  macro-improvements.md  metrics-initiative.md  min_generic_const_arguments.md  next-solver.md  not_accepted.md  null-alignment-debug-checks.md  null-enum-discriminant-debug-checks.md  open-namespaces.md  optimize-clippy-linting-2.md  parallel-front-end.md  perf-improvements.md  pub-priv.md  pubgrub-in-cargo.md  restrictions.md  rfl.md  rust-plan.md  rust-vision-doc.md  (+11 more)
src/2025h2/: FLS-integration-doc-processes.md  FLS-up-to-date-capabilities.md  README.md  Rust-for-Linux-compiler.md  Rust-for-Linux-language.md  a-mir-formality.md  autoreborrow-traits.md  box-keyword-for-recursion.md  bridge-between-incrementals.md  build-std.md  cargo-build-analysis.md  cargo-build-dir-layout.md  cargo-caching-improvements.md  cargo-plumbing.md  cargo-script.md  cargo-semver-checks.md  codegen_retags.md  comprehensive-niche-checks.md  const-generics.md  delegation.md  ergonomic-rc.md  evolving-traits.md  field-projections.md  finishing-gpu-offload.md  gcc-backend-tests.md  goals.md  in-place-initialization.md  interop-problem-map.md  libtest-json.md  mir-move-elimination.md  next-solver.md  not_accepted.md  open-namespaces.md  parallel-front-end.md  pin-ergonomics.md  polonius.md  production-ready-cranelift.md  pub-priv.md  reference-expansion.md  reflection-and-comptime.md  (+10 more)
src/2026/: README.md  Rust-for-Linux-compiler.md  Rust-for-Linux-language.md  a-mir-formality.md  aarch64_pointer_authentication_pauthtest.md  afidt-box.md  arbitrary-self-types.md  asm-const-ptr.md  assumptions_on_binders.md  async-future-memory-optimisation.md  async-statemachine-optimisation.md  bf16.md  borrowck-fcw.md  borrowsanitizer.md  build-std.md  cargo-cross-workspace-cache.md  cargo-lints.md  (+102 more)
templates/: goal_card.hbs  goal_comments.hbs  introduce_goal.hbs  progress.hbs  updates.hbs
(+38 files in other folders)
