[package]
name = "mdbook-goals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
disk-persist = "0.1.0"
mdbook = "0.4.40"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
semver = "1.0.23"
serde = "1.0.204"
serde_json = "1.0.120"
structopt = "0.3.26"
walkdir = "2.5.0"
