[package]
name = "mdbook-goals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
disk-persist = "0.1.0"
mdbook = "0.4.40"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
semver = "1.0.23"
serde = "1.0.204"
serde_json = "1.0.120"
structopt = "0.3.26"
walkdir = "2.5.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }
lazy_static = "1.5.0"
progress_bar = "1.0.5"
chrono = "0.4.38"
aws-config = "1.5.8"
aws-sdk-bedrock = "1.57.0"
aws-sdk-bedrockruntime = "1.55.0"
tokio = { version = "1.41.0", features = ["full"] }
