[package]
name = "mdbook-goals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
mdbook = "0.4.43"
regex = "1.11.1"
rust-project-goals = { version = "0.1.0", path = "../rust-project-goals" }
rust-project-goals-llm = { version = "0.1.0", path = "../rust-project-goals-llm" }
semver = "1.0.23"
serde_json = "1.0.133"
structopt = "0.3.26"
