[package]
name = "mdbook-goals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
mdbook = "0.4.43"
regex = "1.11.1"
rust-project-goals = { version = "0.1.0", path = "../rust-project-goals" }
semver = "1.0.23"
serde_json = "1.0.133"
