[package]
name = "mdbook-goals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.11.1"
rust-project-goals = { version = "0.1.0", path = "../rust-project-goals" }
rust-project-goals-cli = { version = "0.1.0", path = "../rust-project-goals-cli" }
semver = "1.0.23"
serde_json = "1.0.133"
mdbook-preprocessor = "0.5.2"

