[package]
name = "rust-project-goals-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
regex = "1.11.1"
rust-project-goals = { version = "0.1.0", path = "../rust-project-goals" }
rust-project-goals-llm = { version = "0.1.0", path = "../rust-project-goals-llm" }
semver = "1.0.23"
serde = "1.0.216"
walkdir = "2.5.0"
serde_json = "1.0.133"
chrono = "0.4.39"
progress_bar = "1.0.6"
clap = { version = "4.5.23", features = ["derive"] }
rust-project-goals-json = { version = "0.1.0", path = "../rust-project-goals-json" }
