[package]
name = "rust-project-goals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.133"
walkdir = "2.5.0"
rust_team_data = { git = "https://github.com/rust-lang/team" }
rust-project-goals-json = { version = "0.1.0", path = "../rust-project-goals-json" }
toml = "0.8.19"
indexmap = "2.7.1"
spanned = "0.6.1"

[dev-dependencies]
tempfile = "3.8.1"
